--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- snakeyaml (YML parser) -->
