--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,7 @@ Channels: {"global": "NUMERICALCHANNELID"}
 DiscordConsoleChannelId: "NUMERICALCHANNELID"
 
 # Debug options, don't touch unless needed
+Debug: false
 CancelConsoleCommandIfLoggingFailed: true
 ColorLookupDebug: false
 DontSendCanceledChatEvents: true
@@ -217,7 +218,8 @@ MinecraftPlayerAchievementMessagesFormat: "**%displayname% earned achievement %a
 # This is all the stuff related to automatically updating the chat or console channel's topics with server information
 # To disable one of the formats, make the value completely blank, i.e. ""
 #
-# ChannelTopicUpdaterChatChannelTopicFormat and ChannelTopicUpdaterConsoleChannelTopicFormat have the same available formatters
+# ChatChannelTopicFormat and ConsoleChannelTopicFormat have the same available formatters
+#
 # %playercount% = current player count
 # %playermax% = maximum player count
 # %date% = current date
